--- a/LearnOpenGL.vcxproj
+++ b/LearnOpenGL.vcxproj
@@ -164,6 +164,7 @@
   <ItemGroup>
     <Image Include="resources\textures\awesomeface.png" />
     <Image Include="resources\textures\container.jpg" />
+    <Image Include="resources\textures\manim.png" />
     <Image Include="resources\textures\wall.jpg" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
