--- a/LearnOpenGL.vcxproj.filters
+++ b/LearnOpenGL.vcxproj.filters
@@ -51,5 +51,8 @@
     <Image Include="resources\textures\wall.jpg">
       <Filter>Resource Files</Filter>
     </Image>
+    <Image Include="resources\textures\manim.png">
+      <Filter>Resource Files</Filter>
+    </Image>
   </ItemGroup>
 </Project>
