--- a/LearnOpenGL.vcxproj
+++ b/LearnOpenGL.vcxproj
@@ -159,6 +159,8 @@
     <None Include=".gitattributes" />
     <None Include=".gitignore" />
     <None Include="resources\shaders\fragment.glsl" />
+    <None Include="resources\shaders\light-fragment.glsl" />
+    <None Include="resources\shaders\light-vertex.glsl" />
     <None Include="resources\shaders\vertex.glsl" />
     <None Include="shaders\fragment.glsl" />
     <None Include="shaders\vertex.glsl" />
