--- a/LearnOpenGL.vcxproj.filters
+++ b/LearnOpenGL.vcxproj.filters
@@ -46,6 +46,8 @@
     <None Include=".gitignore" />
     <None Include="resources\shaders\fragment.glsl" />
     <None Include="resources\shaders\vertex.glsl" />
+    <None Include="resources\shaders\light-vertex.glsl" />
+    <None Include="resources\shaders\light-fragment.glsl" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="resources\textures\awesomeface.png">
